routing/apps.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apps-gateway
  namespace: apps
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soarca-doc-httproute
  namespace: apps
spec:
  parentRefs:
    - name: apps-gateway
      namespace: apps
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /soarca
    backendRefs:
    - name: soarca-doc
      port: 80
