routing/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soarca-doc-httproute
  namespace: networking
spec:
  parentRefs:
  - name: soarca-doc-gateway
  hostnames:
  - "www.cluster.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /soarca
    backendRefs:
    - name: soarca-doc
      port: 31313
