routing/monitoring.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-route
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-gateway
      namespace: monitoring
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dashboard
    backendRefs:
    - name: kubernetes-dashboard-web
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /grafana
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
