routing/networking.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: networking-gateway
  namespace: networking
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: networking-route
  namespace: networking
spec:
  parentRefs:
    - name: networking-gateway
      namespace: networking
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hubble
    backendRefs:
    - name: hubble-ui
      port: 80
